# diploma

./: .gitignore  README.md
back/: .env.example  pyproject.toml
back/core/: admin.py  urls.py  utils.py
back/core/api/: BusinessDomainsViewSet.py  DbtViewSet.py  TagViewSet.py  __init__.py
back/core/enums/: ModelTypeEnum.py  __init__.py
back/core/filters/: TagFilter.py  __init__.py
back/core/migrations/: 0001_initial.py  0002_alter_tablesindomains_business_domain_and_more.py  0003_tags_tables_tags.py  0004_alter_tags_description.py  0005_businessdomains_tags.py  0006_alter_businessdomains_tags.py  0007_tagstype_alter_businessdomains_tags_tags_tag_type.py
back/core/models/: BusinessDomains.py  Tables.py  TablesInDomains.py  Tags.py  TagsType.py  __init__.py
back/core/serializers/: BusinessDomainsSerializer.py  DiGraphSerializer.py  PaginationSerializer.py  TablesDropdownSerializer.py  TablesSerializer.py  TagsSerializer.py  TagsWithCountSerializer.py  __init__.py
back/core/service/: DBTGraph.py  DBTGraphService.py  __init__.py
back/src/: settings.py  urls.py
front/: package-lock.json  package.json
front/public/: index.html
front/src/: App.vue  config.js  main.js
front/src/assets/: data.json
front/src/components/: Breadcrumb.vue  Circle.vue  CircleInfo.vue  CirclePacking.vue  DBTDialogWindow.vue  DialogWindow.vue  MultiSelectTags.vue  MyTagCanvas.vue  NavBar.vue  ObjectCard.vue
front/src/router/: index.js
front/src/store/: api.js  index.js
front/src/views/: CirclePacking.vue  ModelPage.vue  SearchPage.vue  TableTreeSearch.vue
(+6 files in other folders)
